After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 742253 - Some settings shouldn't be per language
Some settings shouldn't be per language
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: preferences
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-01-03 10:19 UTC by Lasse Schuirmann
Modified: 2015-01-11 03:53 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Settings from org.gnome.builder.editor.language to org.gnome.builder.editor (14.56 KB, patch)
2015-01-05 09:32 UTC, Dimitris Zenios
needs-work Details | Review
Move some settings from org.gnome.builder.editor.language to org.gnome.builder.editor (36.37 KB, patch)
2015-01-08 23:15 UTC, Dimitris Zenios
committed Details | Review

Description Lasse Schuirmann 2015-01-03 10:19:06 UTC
Especially settings altering the appearance of the editor shouldn't be per language. If I want line numbers I usually don't want to set that for every language again.

IMO the following settings should be global for the editor:
* Display line numbers
* Display line marks (though I don't fully understand this setting - IMO a better description is needed here)
* Home moves to first non-whitespace character
* Highlight current line
* Highlight matching brackets
* Enable indentation
Comment 1 Christian Hergert 2015-01-03 22:43:03 UTC
Agreed.

Let's make these global:

 * Line Numbers
 * Highlight current line
 * Highlight matching brackets
 * Home moves to first non-whitespace character

Let's remove this altogether:

 * Show line marks

I don't want to make global:

 * Enable Indentation

   This is because I'm concerned at the quality of auto-indentation per
   language. Some languages will be better than others, and some will use
   the GtkSourceView fallback which is rather annoying.

Care to cook up a patch/ui change?
Comment 2 Lasse Schuirmann 2015-01-04 10:34:00 UTC
Sounds good. I'm currently looking at the code, trying to make a patch. But I can't make guarantees, exams are coming ;)
Comment 3 Dimitris Zenios 2015-01-05 09:32:38 UTC
Created attachment 293750 [details] [review]
Settings from  org.gnome.builder.editor.language to org.gnome.builder.editor

Move settings 
 * show-line-numbers
 * highlight-current-line
 * highlight-matching-braces
 * smart-home

from  org.gnome.builder.editor.language to org.gnome.builder.editor and remove the checkbox from language settings widget
Comment 4 Dimitris Zenios 2015-01-05 09:33:37 UTC
What about the ui?Shall we add a GtkSwitch for each of those 4 setttings into the editor settings widget?
Comment 5 Lasse Schuirmann 2015-01-05 09:40:25 UTC
(In reply to comment #4)
> What about the ui?Shall we add a GtkSwitch for each of those 4 setttings into
> the editor settings widget?

I'd do it this way since it is consistent with the other settings. And it doesn't look as ugly and uninformative as checkboxes since it provides more information.

If we want an alternative we'd need a refactoring of the existent settings, this is probably needed at some point anyway with the consultation of the design team IMO.
Comment 6 Lasse Schuirmann 2015-01-05 10:26:53 UTC
Review of attachment 293750 [details] [review]:

I didn't have time to look at the code yet but you should reformat the commit message. You can find guidelines for that here: https://wiki.gnome.org/Git/CommitMessages

I'd also suggest to also put the reason for the change in the message so the user doesnt need to go to bugzilla.
Comment 7 Dimitris Zenios 2015-01-05 10:28:45 UTC
I will have an additional patch soon with all the other changes.I will follow the guidelines as said on my final patch.

Thanks
Comment 8 Dimitris Zenios 2015-01-08 23:15:31 UTC
Created attachment 294128 [details] [review]
Move some settings from org.gnome.builder.editor.language to org.gnome.builder.editor

Move settings
 * Line Numbers
 * Highlight current line
 * Highlight matching brackets
 * Home moves to first non-whitespace character
from org.gnome.builder.editor.language to org.gnome.builder.editor
    
Removed setting
 * Show line marks
Comment 9 Christian Hergert 2015-01-11 03:53:10 UTC
Pushed to master.