Some settings shouldn't be per language

Move settings
 * Line Numbers
 * Highlight current line
 * Highlight matching brackets
 * Home moves to first non-whitespace character
from org.gnome.builder.editor.language to org.gnome.builder.editor

Removed setting
 * Show line marks

https://bugzilla.gnome.org/show_bug.cgi?id=742253