src/editor/gb-editor-settings-widget.c
@@ -27,15 +27,10 @@ struct _GbEditorSettingsWidgetPrivate
   gchar          *language;
 
   GtkCheckButton *auto_indent;
-  GtkCheckButton *highlight_current_line;
-  GtkCheckButton *highlight_matching_brackets;
   GtkCheckButton *insert_matching_brace;
   GtkCheckButton *insert_spaces_instead_of_tabs;
   GtkCheckButton *overwrite_braces;
-  GtkCheckButton *show_line_marks;
-  GtkCheckButton *show_line_numbers;
   GtkCheckButton *show_right_margin;
-  GtkCheckButton *smart_home_end;
   GtkSpinButton  *right_margin_position;
   GtkSpinButton  *tab_width;
   GtkCheckButton *trim_trailing_whitespace;
@@ -88,12 +83,6 @@ gb_editor_settings_widget_set_language (GbEditorSettingsWidget *widget,
       g_settings_bind (priv->settings, "auto-indent",
                        priv->auto_indent, "active",
                        G_SETTINGS_BIND_DEFAULT);
-      g_settings_bind (priv->settings, "highlight-current-line",
-                       priv->highlight_current_line, "active",
-                       G_SETTINGS_BIND_DEFAULT);
-      g_settings_bind (priv->settings, "highlight-matching-brackets",
-                       priv->highlight_matching_brackets, "active",
-                       G_SETTINGS_BIND_DEFAULT);
       g_settings_bind (priv->settings, "insert-matching-brace",
                        priv->insert_matching_brace, "active",
                        G_SETTINGS_BIND_DEFAULT);
@@ -103,17 +92,8 @@ gb_editor_settings_widget_set_language (GbEditorSettingsWidget *widget,
       g_settings_bind (priv->settings, "overwrite-braces",
                        priv->overwrite_braces, "active",
                        G_SETTINGS_BIND_DEFAULT);
-      g_settings_bind (priv->settings, "show-line-marks",
-                       priv->show_line_marks, "active",
-                       G_SETTINGS_BIND_DEFAULT);
-      g_settings_bind (priv->settings, "show-line-numbers",
-                       priv->show_line_numbers, "active",
-                       G_SETTINGS_BIND_DEFAULT);
       g_settings_bind (priv->settings, "show-right-margin",
                        priv->show_right_margin, "active",
-                       G_SETTINGS_BIND_DEFAULT);
-      g_settings_bind (priv->settings, "smart-home-end",
-                       priv->smart_home_end, "active",
                        G_SETTINGS_BIND_DEFAULT);
       g_settings_bind (priv->settings, "right-margin-position",
                        priv->right_margin_position, "value",
@@ -189,16 +169,11 @@ gb_editor_settings_widget_class_init (GbEditorSettingsWidgetClass *klass)
 
   GB_WIDGET_CLASS_TEMPLATE (klass, "gb-editor-settings-widget.ui");
   GB_WIDGET_CLASS_BIND (klass, GbEditorSettingsWidget, auto_indent);
-  GB_WIDGET_CLASS_BIND (klass, GbEditorSettingsWidget, highlight_current_line);
-  GB_WIDGET_CLASS_BIND (klass, GbEditorSettingsWidget, highlight_matching_brackets);
   GB_WIDGET_CLASS_BIND (klass, GbEditorSettingsWidget, insert_matching_brace);
   GB_WIDGET_CLASS_BIND (klass, GbEditorSettingsWidget, insert_spaces_instead_of_tabs);
   GB_WIDGET_CLASS_BIND (klass, GbEditorSettingsWidget, right_margin_position);
   GB_WIDGET_CLASS_BIND (klass, GbEditorSettingsWidget, overwrite_braces);
-  GB_WIDGET_CLASS_BIND (klass, GbEditorSettingsWidget, show_line_marks);
-  GB_WIDGET_CLASS_BIND (klass, GbEditorSettingsWidget, show_line_numbers);
   GB_WIDGET_CLASS_BIND (klass, GbEditorSettingsWidget, show_right_margin);
-  GB_WIDGET_CLASS_BIND (klass, GbEditorSettingsWidget, smart_home_end);
   GB_WIDGET_CLASS_BIND (klass, GbEditorSettingsWidget, tab_width);
   GB_WIDGET_CLASS_BIND (klass, GbEditorSettingsWidget, trim_trailing_whitespace);
 
